agregue educacion y agregue el icono de upwork

--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -10,15 +10,21 @@ import Timelapse from "./Timelapse.astro";
 
   <div class="flex flex-col justify-center items-center w-full">
     <Timelapse
+    title="Instituto Cultural Argentino Británico"
+    description="A2/KET English Course"
+    lapse="May 2024 - Current"
+    invert={true}
+  />
+    <Timelapse
       title="UNLP Informatica"
       description="Bachelor's Degree in Systems"
-      lapse="March 2021 - Current"
+      lapse="March 2020 - Current"
       invert={false}
     />
     <Timelapse
       title="UNLP Informatica"
       description="University Programmer Analyst"
-      lapse="March 2021 - March 2025 (estimated completion date)"
+      lapse="March 2020 - March 2025 (estimated completion date)"
       invert={true}
     />
     <Timelapse
