--- a/src/components/Proyect.astro
+++ b/src/components/Proyect.astro
@@ -10,6 +10,8 @@ const {
   githubShow,
   githubLink,
   proyectLink,
+  upworkLink,
+  upworkShow,
 } = Astro.props;
 const invertP = `${invert ? "invertR" : "invertL"}`;
 ---
@@ -24,7 +26,8 @@ const invertP = `${invert ? "invertR" : "invertL"}`;
     format="webp"
     quality={"mid"}
     loading="lazy"
-    aria-hidden={true}  />
+    aria-hidden={true}
+  />
 
   <div
     class={`flex flex-col justify-center items-center mt-2 static md:absolute md:left-0 h-auto md:w-full ${invertP} last:border-red-500`}
@@ -69,7 +72,8 @@ const invertP = `${invert ? "invertR" : "invertL"}`;
             d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
           ></path></svg
         ></a
-      ><a href={proyectLink} target="_blank" rel="noreferrer" aria-label="web"
+      >
+      <a href={proyectLink} target="_blank" rel="noreferrer" aria-label="web"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10 w-10 transition duration-300 ease-in-out hover:scale-125 hover:text-[var(--bg-buttons)]"
@@ -92,6 +96,23 @@ const invertP = `${invert ? "invertR" : "invertL"}`;
             d="M12.5 3a17 17 0 0 1 0 18"></path></svg
         ></a
       >
+      <a
+        class={`${upworkShow ? "" : "hidden"}`}
+        href={upworkLink}
+        target="_blank"
+        rel="noreferrer"
+        aria-label="upwork"
+      >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-11 w-11 transition duration-300 ease-in-out hover:scale-125 hover:text-[var(--bg-buttons)]"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M17.47 6.07a4.54 4.54 0 0 0-4.38 3.69 19.9 19.9 0 0 1-2.28-4.9H8.55v6a2.14 2.14 0 1 1-4.28 0v-6L2 4.91v6a4.4 4.4 0 1 0 8.8-.05v-1a20.55 20.55 0 0 0 1.65 2.7l-1.38 6.61h2.32l1-4.81a5.61 5.61 0 0 0 3.11.89 4.57 4.57 0 0 0 0-9.14zm0 6.83a4.09 4.09 0 0 1-2.55-1l.23-.91v-.05c.16-1 .66-2.6 2.35-2.6a2.25 2.25 0 0 1 2.27 2.24 2.41 2.41 0 0 1-2.27 2.32z"
+              fill="currentColor"
+            ></path></svg>
+      </a>
     </div>
   </div>
 </div>
