--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -19,6 +19,8 @@ import Proyect from "./Proyect.astro";
       title="Wodensec"
       proyectLink="https://www.wodensec.com/"
       invert={true}
+      upworkShow = {true}
+      upworkLink="https://www.upwork.com/freelancers/felipefidalgo?p=1778858093437452288"
       description="Work on this project to fix and make some modifications. Add new sections, modify animations, fix bugs and change styles. All modifications were done in a github repository, which allowed my client to keep track of all changes."
     />
     <Proyect
